# go-cafa-slim

./: Makefile  README.md  pyproject.toml
downloads/: go-basic.obo.old
src/go_cafa_slim/: __init__.py
subset/: iba-1.tsv  iba-slim.terms.txt
